Avoid discarding previous pixmap

When resizing, the SurfaceItem will discard the current pixmap until a
new one is created. If the newly created pixmap is valid, the previous
pixmap will be discarded in SurfaceItem::updatePixmap().

However, the previous pixmap can be discarded only if it's unreferenced,
in other words, no effect needs the previous pixmap.

BUG: 439689